--- a/PhantasmaMail/PhantasmaMail/Controls/MailFrameCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/MailFrameCell.xaml
@@ -38,7 +38,7 @@
             <BoxView Grid.Row="2"
                      Grid.Column="1"
                      Grid.ColumnSpan="2"
-                     BackgroundColor="Black" />
+                     BackgroundColor="{StaticResource SeparatorGray}" />
 
             <Label Grid.Row="3"
                    Grid.Column="1"
