--- a/PhantasmaMail/PhantasmaMail/Views/InboxView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/InboxView.xaml
@@ -7,7 +7,6 @@
     xmlns:controls="clr-namespace:PhantasmaMail.Controls"
     xmlns:syncfusion="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
     xmlns:extensions="clr-namespace:PhantasmaMail.MarkupExtensions"
-    xmlns:behaviors="clr-namespace:PhantasmaMail.Behaviors;assembly=PhantasmaMail"
     Title="{extensions:Translate MenuItem_Inbox}">
     <ContentPage.ToolbarItems>
         <ToolbarItem Icon="icon.png" Command="{Binding NewMessageCommand}" />
@@ -20,14 +19,14 @@
             <syncfusion:SfListView
                 Grid.Row="0"
                 AutoFitMode="Height"
-                ItemsSource="{Binding InboxList}"
+                ItemsSource="{Binding InboxList, Mode=TwoWay}"
+                SelectedItem="{Binding MessageSelected}"
                 SelectionBackgroundColor="Red"
                 SelectionMode="Single"
-                behaviors:ItemTappedCommandListView.ItemTappedCommand="{Binding MessageSelectedCommand}"
                 VerticalOptions="FillAndExpand">
                 <syncfusion:SfListView.ItemTemplate>
                     <DataTemplate>
-                        <controls:MailFrameCell/>
+                        <controls:MailFrameCell />
                     </DataTemplate>
                 </syncfusion:SfListView.ItemTemplate>
             </syncfusion:SfListView>
