--- a/PhantasmaMail/PhantasmaMail/Views/MenuView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/MenuView.xaml
@@ -9,8 +9,8 @@
     xmlns:templates="clr-namespace:PhantasmaMail.Controls"
     xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
     xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
-    Title=" "
-    BackgroundColor="Red">
+    xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+    Title=" ">
     <ContentPage.Resources>
         <ResourceDictionary>
 
