--- a/PhantasmaMail/PhantasmaMail/Views/SentView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/SentView.xaml
@@ -2,13 +2,34 @@
 <ContentPage
     x:Class="PhantasmaMail.Views.SentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:extensions="clr-namespace:PhantasmaMail.MarkupExtensions"
+    xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
+    xmlns:controls="clr-namespace:PhantasmaMail.Controls;assembly=PhantasmaMail"
+    Title="{extensions:Translate MenuItem_Sent}">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Icon="icon.png"/>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout>
-            <Label
-                HorizontalOptions="CenterAndExpand"
-                Text="Sent View"
-                VerticalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid VerticalOptions="FillAndExpand">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <xForms:SfListView
+                Grid.Row="0"
+                AutoFitMode="Height"
+                ItemsSource="{Binding SentList, Mode=TwoWay}"
+                SelectedItem="{Binding MessageSelected}"
+                SelectionBackgroundColor="Red"
+                SelectionMode="Single"
+                VerticalOptions="FillAndExpand">
+                <xForms:SfListView.ItemTemplate>
+                    <DataTemplate>
+                        <controls:InboxMessageCell />
+                    </DataTemplate>
+                </xForms:SfListView.ItemTemplate>
+            </xForms:SfListView>
+        </Grid>
+
     </ContentPage.Content>
 </ContentPage>
