added new top bar to inbox and sent pages Changes to navigation service Refractored some code

--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -192,6 +192,11 @@
                         Value="{StaticResource MidMediumSize}" />
             </Style>
 
+            <Style x:Key="SwitchBarLabelStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="{StaticResource LargeSize}" />
+                <Setter Property="FontFamily" Value="{StaticResource OpenSansSemiBold}" />
+            </Style>
+
             <Style x:Key="ButtonStyle" TargetType="Button">
                 <Setter Property="BorderRadius" Value="8" />
                 <Setter Property="BackgroundColor" Value="#FFFFFF" />
