--- a/PhantasmaMail/PhantasmaMail/Views/MenuView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/MenuView.xaml
@@ -70,7 +70,7 @@
             </Grid>
 
             <!-- Logout -->
-            <Grid Grid.Row="1" HorizontalOptions="End" VerticalOptions="End" Margin="10,0">
+            <Grid Grid.Row="1" HorizontalOptions="End" VerticalOptions="End" Margin="10,0" IsVisible="False">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
